# c-cpp-demo

./: .gitignore  CMakeLists.txt  LICENSE
.devcontainer/: Dockerfile
const_expressions/c/: main.c
const_expressions/cpp/: CMakeLists.txt  main.cpp
disassembly/c/: CMakeLists.txt  main.c  main.out.txt
posix_timer/: main.c
static_assert/c/: CMakeLists.txt  main.c
symbol/: CMakeLists.txt  hello_c.c  hello_cpp.cpp  hello_lib.c  hello_lib2.c  symbol.cpp
